BuildHughes/translation-tool/inputs/source_meta/objects/Hsvc_CaseActivity__c.object
<CustomObject>
    <fields>
        <fullName>HSvc_LatestWorkOrderEventTypeDateTime__c</fullName>
        <label>Latest WorkOrder Event Type Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HSvc_LatestWorkOrderEventType__c</fullName>
        <label>Latest WorkOrder Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ARRIVAL</fullName>
                </value>
                <value>
                    <fullName>STOP</fullName>
                </value>
                <value>
                    <fullName>ETA</fullName>
                </value>
                <value>
                    <fullName>CLOSURE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_ProblemCode__c</fullName>
        <label>Problem Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_ProductGrouping__c</fullName>
        <label>Product Grouping</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Tools</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Satellite Broadband</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Protocol_Id__c</fullName>
        <label>Protocol ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_ReasonClosed__c</fullName>
        <label>Reason Closed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_RecommendedNextSteps__c</fullName>
        <label>Recommended Next Steps</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abort</fullName>
                </value>
                <value>
                    <fullName>Account Transaction</fullName>
                </value>
                <value>
                    <fullName>Advanced Warranty Replacement</fullName>
                </value>
                <value>
                    <fullName>Continue Install</fullName>
                </value>
                <value>
                    <fullName>Corrected Configuration</fullName>
                </value>
                <value>
                    <fullName>Corrected Connections</fullName>
                </value>
                <value>
                    <fullName>Customer to replace cables</fullName>
                </value>
                <value>
                    <fullName>Customer Will Configure</fullName>
                </value>
                <value>
                    <fullName>Customer Will Correct</fullName>
                </value>
                <value>
                    <fullName>Dispatch</fullName>
                </value>
                <value>
                    <fullName>Dispatch Tech</fullName>
                </value>
                <value>
                    <fullName>Escalate</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Escalate to DM</fullName>
                </value>
                <value>
                    <fullName>Escalate to NAP</fullName>
                </value>
                <value>
                    <fullName>Expedited TR</fullName>
                </value>
                <value>
                    <fullName>Follow-up</fullName>
                </value>
                <value>
                    <fullName>forwarded for approval</fullName>
                </value>
                <value>
                    <fullName>forwarded for processing</fullName>
                </value>
                <value>
                    <fullName>Hughes Truck Roll</fullName>
                </value>
                <value>
                    <fullName>Inform customer</fullName>
                </value>
                <value>
                    <fullName>Monitoring</fullName>
                </value>
                <value>
                    <fullName>NAP Office Only</fullName>
                </value>
                <value>
                    <fullName>NAP Truck Roll</fullName>
                </value>
                <value>
                    <fullName>None Required</fullName>
                </value>
                <value>
                    <fullName>Other (Explain in Notes)</fullName>
                </value>
                <value>
                    <fullName>Partner RMA</fullName>
                </value>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>PIP</fullName>
                </value>
                <value>
                    <fullName>Priority TR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_RelCaseRTName__c</fullName>
        <description>Record Type Developer Name of Related Case</description>
        <formula>Case__r.RecordType.DeveloperName</formula>
        <label>Related Case RT Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Related_Root_Case__c</fullName>
        <formula>IF(
  Case__r.ParentId=NULL, Case__c,
  IF(
    Case__r.Parent.ParentId=NULL, Case__r.ParentId,
    IF(
       Case__r.Parent.Parent.ParentId = NULL, Case__r.Parent.ParentId,
       IF(
             Case__r.Parent.Parent.Parent.ParentId= NULL, Case__r.Parent.Parent.ParentId,
             Case__r.Parent.Parent.Parent.ParentId
       )
    )
  )


)</formula>
        <label>Related Root Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_RepairCauseCode__c</fullName>
        <label>Repair Cause Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_RepairCode__c</fullName>
        <label>Repair Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_ResolutionCodeRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resolution Code</label>
        <referenceTo>HSvc_ResolutionCodeRule__c</referenceTo>
        <relationshipLabel>Case Activities</relationshipLabel>
        <relationshipName>Case_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Resolution__c</fullName>
        <label>Resolution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_ScheduledWorkOrderDateTime__c</fullName>
        <label>Scheduled WorkOrder Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HSvc_ScheduledWorkOrderTimeWindow__c</fullName>
        <label>Scheduled WorkOrder Time Window</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HSvc_SendEmailToTAGMOD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked when activity of type ETA is created and the LatestWorkOrderEventDateTime of the activity is greater than the second milestone then this check box is checked and Workflow is invoked</description>
        <label>Send Email to TAGMOD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_SendEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SendEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dummy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_SourceSystem__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_StateCode__c</fullName>
        <label>State Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_TMContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T&amp;M Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_UserUpdatedActivity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if Task is User generated or System generated</description>
        <label>User Updated Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Vendor_Meet_Acknowledgement__c</fullName>
        <description>Field to store the acknowledgement date time from case</description>
        <label>Vendor Meet Acknowledgement Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hsvc_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Case Activities</relationshipLabel>
        <relationshipName>Case_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hsvc_CCRNewValue__c</fullName>
        <label>CCR New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_Customer_Ticket_Number__c</fullName>
        <description>Related to CES and Customer Gateway. Will be retrieved from PS. Needs to be stored on Activity</description>
        <label>Customer Ticket Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_First_Call_Resolution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates whether to choose TRUE or false for First Call Resolution</description>
        <label>First Call Resolution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hsvc_ProviderTicketID__c</fullName>
        <label>Provider Ticket ID</label>
        <length>50</length>
        <type>Text</type>
	</fields>
    <fields>
        <fullName>Hsvc_RelocationCity__c</fullName>
        <description>Relocation City</description>
        <inlineHelpText>Relocation City</inlineHelpText>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_RelocationComplement__c</fullName>
        <label>Complement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_RelocationCountry__c</fullName>
        <description>Relocation Country</description>
        <inlineHelpText>Relocation Country</inlineHelpText>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_RelocationNeighborhood__c</fullName>
        <label>Neighborhood</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_RelocationPostalCode__c</fullName>
        <description>Relocation Postal Code</description>
        <inlineHelpText>Relocation Postal Code</inlineHelpText>
        <label>Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_RelocationStateCode__c</fullName>
        <description>Relocation State Code</description>
        <inlineHelpText>Relocation State Code</inlineHelpText>
        <label>State Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_RelocationState__c</fullName>
        <description>Relocation State</description>
        <inlineHelpText>Relocation State</inlineHelpText>
        <label>State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_RelocationStreet__c</fullName>
        <description>Relocation Street</description>
        <inlineHelpText>Relocation Street</inlineHelpText>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>	
    <fields>
        <fullName>Hsvc_Resolved_on_customer_favor__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field indicates whether a case is solved in customer favour or not.</description>
        <label>Resolved on Customer Favor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hsvc_ServiceProviderName__c</fullName>
        <formula>Hsvc_ServiceProvider__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Provider Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_ServiceProvider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to store service provider for a workorder.</description>
        <label>Service Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Case Activities</relationshipLabel>
        <relationshipName>Case_Activities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hsvc_WaiveFee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waive Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HughesSvc_Assigned_To__c</fullName>
        <description>This field is populated with the case owner</description>
        <label>Assigned To</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HughesSvc_ParentCaseNumber__c</fullName>
        <description>This field is used to get the case number of the case</description>
        <formula>Case__r.CaseNumber</formula>
        <label>Parent Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirect_Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indirect Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activity Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KB_Exit_Code_Description__c</fullName>
        <label>KB Exit Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KB_Exit_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KB Exit Code</label>
        <referenceTo>HSvc_KB_Exit_Code__c</referenceTo>
        <relationshipLabel>Case Activities</relationshipLabel>
        <relationshipName>KBExitCodesWithActivities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Name__c</fullName>
        <formula>LastModifiedBy.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified By_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAP_Related_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NAP Related Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSFT_Created_By__c</fullName>
        <label>Source System Created By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSFT_Date_Time_Created__c</fullName>
        <label>Source System Date/Time Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSFT_Date_Time_Modified__c</fullName>
        <label>Source System Date/Time Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSFT_Last_Modified_By__c</fullName>
        <label>Source System Last Modified By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                    <default>true</default>
                    <label>Major</label>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Case_Number__c</fullName>
        <label>Provider Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Number__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recommended_Next_Steps__c</fullName>
        <label>Recommended Next Steps Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RecordTypeofParentCase__c</fullName>
        <description>Record type name of Parent case.</description>
        <formula>Case__r.Parent.RecordType.Name</formula>
        <label>Record Type of Parent Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Case_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Activities (Related Case Number)</relationshipLabel>
        <relationshipName>Case_Activities1</relationshipName>
        <type>Lookup</type>
    </fields>
	<fields>
        <fullName>RelocationCountryCode__c</fullName>
        <description>Relocation Country Code</description>
        <inlineHelpText>Relocation Country Code</inlineHelpText>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reported_by_Contact__c</fullName>
        <label>Reported by Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_Escalation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required Escalation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Serial_No__c</fullName>
        <label>Serial No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Number__c</fullName>
        <label>Shipment Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spec_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spec Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State_Code_Description__c</fullName>
        <label>State Code Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State Code</label>
        <referenceTo>HSvc_State_Code__c</referenceTo>
        <relationshipLabel>Case Activities</relationshipLabel>
        <relationshipName>Case_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Third_Party_Cun__c</fullName>
        <label>Third Party Cun</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party__c</fullName>
        <label>Third Party</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dummy Third Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tools_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tools Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Activity Type value</description>
        <formula>ActivityType__r.Name</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YAHS_Assigned_To_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field copies derives its value from the Assigned to user on Case.</description>
        <label>Assigned To User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UsersAssignedToActivities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>YAHS_Case_Number__c</fullName>
        <description>This is to populate Related Case information in HughesSvc_CaseActivityTriggerHelper</description>
        <formula>Case__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YAHS_InstallerId__c</fullName>
        <label>Installer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YAHS_OrderedBeam__c</fullName>
        <label>Ordered Beam</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YAHS_Reason_Code__c</fullName>
        <label>Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YAHS_Related_Case__c</fullName>
        <label>Related Case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YAHS_SelectedBeam__c</fullName>
        <label>Selected Beam</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YAHS_ValidatedRadioPower__c</fullName>
        <label>Validated Radio Power</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YAHS_Validated_Antenna_Size__c</fullName>
        <label>Validated Antenna Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YAHS_validatedLocation__c</fullName>
        <label>Validated Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>YNOC_Above__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tier 2 &amp; Above</label>
        <type>Checkbox</type>
    </fields>
	<fields>
        <fullName>Account_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Transaction</label>
        <referenceTo>HSvc_AccountTransaction__c</referenceTo>
        <relationshipLabel>Case Activities</relationshipLabel>
        <relationshipName>Case_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
	<fields>
        <fullName>HSvc_AccountTransactionCode__c</fullName>
        <description>Account Transaction Code</description>
        <label>Account Transaction Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_BillingResonCode__c</fullName>
        <label>Billing Reson Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Transaction_End_Date__c</fullName>
        <inlineHelpText>This denotes the time till when the transaction is applicable,</inlineHelpText>
        <label>Transaction End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSvc_Transaction_Label_Value__c</fullName>
        <label>Transaction Label Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Transaction_Status__c</fullName>
        <label>Transaction Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Transaction_start_date__c</fullName>
        <inlineHelpText>This denotes the time since when the transaction is applicable,</inlineHelpText>
        <label>Transaction Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hsvc_AccountTransactionReason__c</fullName>
        <label>Account Transaction Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Case Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ActivityType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CA-{000}</displayFormat>
        <label>Case Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>HSvc_RestrictClosedActivityEdit</fullName>
        <active>true</active>
        <description>CSR and CSM can edit open activities only</description>
        <errorConditionFormula>( NOT(ISNEW()) &amp;&amp; ISPICKVAL(PRIORVALUE(Status__c ),&apos;Closed&apos;)) &amp;&amp; ($Profile.Name == &apos;Hughes - CSR&apos;)</errorConditionFormula>
        <errorMessage>You are not authorized user to modify closed activities.</errorMessage>
    </validationRules>
</CustomObject>